适应新特性修改